libs/@local/hashql/hir/tests/ui/lower/inference/dict-empty.jsonc
//@ run: fail
//@ description: Empty dict inference
{
  "#dict": {}
  //~^ ERROR Cannot infer type for this variable
  //~| ERROR Cannot infer type for this variable
}
